Fix tagsMenu not keyboard focusable + 2 colors which contrast was not accessible

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -18,7 +18,7 @@
   --color-turquoise-30: hsla(178, 84%, 53%, 0.3);
 
   --color-gold: hsl(37, 63%, 54%);
-  --color-dark-gold-80: hsla(37, 53%, 53%, 0.8);
+  --color-dark-gold-80: hsl(43, 74%, 30%);
   --color-gold-90: hsla(37, 63%, 63%, 0.9);
 
   --color-error: hsl(337, 63%, 54%);
@@ -94,7 +94,7 @@ button {
 }
 
 button:disabled {
-  opacity: 0.5;
+  background-color: var(--color-dark-gold-80);
   pointer-events: none;
 }
 
@@ -379,7 +379,7 @@ label span,
 
   --color-gold: hsl(195, 84%, 32%);
   --color-gold-90: hsla(195, 84%, 32%, 0.9);
-  --color-dark-gold-80: hsla(195, 74%, 32%, 0.8);
+  --color-dark-gold-80: hsl(200, 73%, 44%);
 
   --color-error: hsl(337, 63%, 54%);
 }
@@ -388,7 +388,7 @@ label span,
   font-weight: 700;
 }
 
-[data-theme='light'] button {
+/* [data-theme='light'] button {
   background-color: var(--color-gold);
 }
 
@@ -397,7 +397,7 @@ label span,
   color: var(--color-gold);
   background-color: var(--color-dark);
   border: 1px solid var(--color-gold);
-}
+} */
 
 [data-theme='light'] .container {
   background-color: var(--color-medium-dark);
